--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "convert": "npm run index.js"
+    "convert": "node index.js"
   },
   "dependencies": {
     "@icemourne/description-converter": "^1.0.5",
