--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "version": "1.0.0",
   "description": "Random TS functions",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "build": "tsc",
     "convert": "node index.js"
   },
   "dependencies": {
     "@icemourne/description-converter": "^1.0.5",
-    "@icemourne/tool-box": "^1.0.5"
+    "@icemourne/tool-box": "^1.0.6"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.191",
