--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,5 +27,5 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           folder: descriptions # Folder you wish to deploy
-          branch: live
+          branch: test
           target-folder: descriptions
