--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,6 @@ jobs:
       - name: Generate data 🚀
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          folder: descriptions # Folder you wish to deploy
+          folder: database # Folder you wish to deploy
           branch: test
-          target-folder: descriptions
+          # target-folder: descriptions
