--- a/.prettierrc.yml
+++ b/.prettierrc.yml
@@ -4,4 +4,8 @@ semi: false
 singleQuote: true
 printWidth: 120
 arrowParens: always
-tab
+jsxSingleQuote: false
+bracketSameLine: false
+bracketSpacing: true
+quoteProps: consistent
+useTabs: false
