--- a/.prettierrc.yml
+++ b/.prettierrc.yml
@@ -9,3 +9,8 @@ bracketSameLine: false
 bracketSpacing: true
 quoteProps: consistent
 useTabs: false
+
+overrides:
+  - files: "*.yml"
+    options:
+      tabWidth: 2
