--- a/package.json
+++ b/package.json
@@ -11,13 +11,12 @@
     "build": "tsc",
     "convert": "node index.js"
   },
-  "dependencies": {
-    "@icemourne/description-converter": "^1.0.43",
-    "@icemourne/tool-box": "^1.0.37"
-  },
   "devDependencies": {
-    "@types/lodash": "^4.14.191",
-    "@types/node": "^18.11.18",
-    "typescript": "^4.9.4"
+    "@icemourne/description-converter": "^1.0.46",
+    "@icemourne/tool-box": "^1.0.38",
+    "@types/lodash": "^4.14.195",
+    "@types/node": "^20.2.5",
+    "lodash": "^4.17.21",
+    "typescript": "^5.1.3"
   }
 }
