--- a/.prettierrc.yml
+++ b/.prettierrc.yml
@@ -1,5 +1,5 @@
-trailingComma: "none"
-tabWidth: 3
+trailingComma: 'none'
+tabWidth: 2
 semi: false
 singleQuote: true
 printWidth: 120
@@ -11,6 +11,6 @@ quoteProps: consistent
 useTabs: false
 
 overrides:
-  - files: "*.yml"
+  - files: '*.yml'
     options:
       tabWidth: 2
